# megacore

./: Cargo.toml  README.md
src/: core.rs  lib.rs  main.rs
src/crypto/: mod.rs
src/downloader/: manager.rs  mod.rs
src/http/: mod.rs
src/mega_api/: mod.rs  session.rs
