[package]
name = "megacore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes = "0.8.4"
base64 = "0.22.1"
bytes = "1.6"
cbc = "0.1.2"
clap = { version = "4.5", features = ["derive"] }
ctr = "0.9.2"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8"
rsa = { version = "0.9.8", default-features = false, features = ["sha2"] }
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "rustls-tls"] }
log = "0.4"
env_logger = "0.10"